2008-05-22  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Gui.Dialogs.OptionPanels/ItemTypeCondition.cs:
	  Remove debug code.

2008-05-22  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Gui.addin.xml, MonoDevelop.Projects.Gui.mdp,
	  MonoDevelop.Projects.Gui.Dialogs/MultiConfigItemOptionsDialog.cs,
	  MonoDevelop.Projects.Gui.Dialogs/MultiConfigItemOptionsPanel.cs,
	  MonoDevelop.Projects.Gui.Dialogs/ProjectOptionsDialog.cs,
	  MonoDevelop.Projects.Gui.Dialogs/CombineOptionsDialog.cs,
	  MonoDevelop.Projects.Gui.Dialogs/ItemOptionsDialog.cs,
	  gtk-gui/MonoDevelop.Projects.Gui.Dialogs.OptionPanels.BaseDirectoryPanelWidget.cs,
	  gtk-gui/objects.xml, gtk-gui/gui.stetic, Makefile.am,
	  MonoDevelop.Projects.Gui.Dialogs.OptionPanels/BaseDirectoryPanel.cs,
	  MonoDevelop.Projects.Gui.Dialogs.OptionPanels/BaseDirectoryPanelWidget.cs,
	  MonoDevelop.Projects.Gui.Dialogs.OptionPanels/ActiveLanguageCondition.cs,
	  MonoDevelop.Projects.Gui.Dialogs.OptionPanels/ItemTypeCondition.cs:
	  Merged the extension points for project and solution option panels
	  into a single extension point. A single extension point will now be
	  used for all kinds of items. Extension conditions can be used to
	  make panels visible only for some specific item types.

2008-05-21  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Projects.Gui.Dialogs.OptionPanels/RuntimeOptionsPanel.cs:
	  Show only runtime versions allowed by the project, rather than the
	  language binding.

2008-05-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Gui.addin.xml, MonoDevelop.Projects.Gui.mdp,
	  MonoDevelop.Projects.Gui/ProjectsGuiServices.cs,
	  MonoDevelop.Projects.Gui.Dialogs/MultiConfigItemOptionsDialog.cs,
	  MonoDevelop.Projects.Gui.Dialogs/MultiConfigItemOptionsPanel.cs,
	  MonoDevelop.Projects.Gui.Dialogs/ProjectOptionsDialog.cs,
	  MonoDevelop.Projects.Gui.Dialogs/CombineOptionsDialog.cs,